--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -3,6 +3,18 @@
   .navbar-toggle {
     padding: $padding-large-vertical $padding-base-horizontal;
     margin-right: 0;
+
+    .icon-bar {
+      @include theme-color('accent', 'background-color');
+    }
+  }
+}
+
+.navbar-default {
+  @include theme-color('nav', 'background-color');
+
+  .btn-link {
+    @include theme-contrast-color('nav');
   }
 }
 
@@ -10,6 +22,7 @@
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover {
   background-color: transparent;
+  @include theme-contrast-color('nav');
 }
 
 .main-nav {
@@ -17,12 +30,20 @@
     z-index: $zindex-navbar;
   }
 
+  .navbar-nav > li > a {
+    @include theme-contrast-color('nav');
+  }
+
   .nav-item.current > a {
     background-color: $brand-primary;
+    @include theme-color('accent', 'background-color');
+    @include theme-contrast-color('accent');
 
     &:focus,
     &:hover {
       background-color: $brand-primary;
+      @include theme-color('accent', 'background-color');
+      @include theme-contrast-color('accent');
     }
   }
 
@@ -48,10 +69,13 @@
       &:hover .navbar-touch-caret,
       &:focus .navbar-touch-caret {
         background: $brand-primary;
+        @include theme-color('accent', 'background-color');
+        @include theme-contrast-color('accent');
 
         &:hover,
         &:focus {
           background-color: $brand-primary;
+          @include theme-color('accent', 'background-color');
         }
       }
     }
@@ -59,7 +83,6 @@
 
   // Mobile only
   @media (max-width: $grid-float-breakpoint-max) {
-
     .navbar-nav {
       margin-top: 0;
       margin-bottom: 0;
@@ -67,6 +90,10 @@
 
     .navbar-collapse {
       box-shadow: none;
+    }
+
+    .navbar-form {
+      @include theme-color('header', 'background-color');
     }
 
     // Add hover border to left side
@@ -87,6 +114,7 @@
       &:hover:before,
       &:focus:before {
         background: $brand-primary;
+        @include theme-color('accent', 'background-color');
       }
     }
 
@@ -105,12 +133,21 @@
         padding: 0;
         // Requires nesting
         background-color: $theme-bg-lighter;
+        @include theme-color('nav', 'background-color');
       }
     }
 
-    .open .dropdown-menu > li > a {
-      padding-top: 10px;
-      padding-bottom: 10px;
+    .open .dropdown-menu {
+      > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+      }
+
+      .active > a,
+      .active > a:hover,
+      .active > a:focus {
+        @include theme-color('accent', 'background-color');
+      }
     }
   }
 
@@ -135,21 +172,41 @@
         &:focus,
         &:hover {
           border-bottom-color: $brand-primary;
+          @include theme-color('accent', 'border-bottom-color');
         }
       }
 
       > .current {
         border-bottom: $nav-hover-border-width solid $brand-primary;
+        @include theme-color('accent', 'border-bottom-color');
 
         &:focus,
         &:hover {
           border-bottom-color: $brand-primary;
+          @include theme-color('accent', 'border-bottom-color');
+        }
+      }
+
+      // hide nav item border bottom with dropdown
+      &.dropdown > a.link {
+        &:focus,
+        &:hover {
+          border-bottom-color: $navbar-default-brand-hover-bg;
         }
       }
 
       > .dropdown-menu {
         margin-top: (-$nav-hover-border-width - 1px);
         margin-left: -1px;
+      }
+
+      .dropdown-menu > li > a {
+        color: $text-color;
+      }
+
+      .dropdown-menu > .active > a {
+        color: $navbar-default-link-active-color;
+        @include theme-color('accent', 'background-color');
       }
     }
 
@@ -172,6 +229,7 @@
 
       &.current .navbar-touch-caret {
         border-bottom: $nav-hover-border-width solid $brand-primary;
+        @include theme-color('accent', 'border-bottom-color');
       }
     }
   }
