--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -76,7 +76,7 @@ $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 
 //** By default, this inherits from the `<body>`.
 $headings-font-family:    inherit !default;
-$headings-font-weight:    600 !default;
+$headings-font-weight:    700 !default;
 $headings-line-height:    1.3 !default;
 $headings-color:          $gray-dark !default;
 
@@ -832,9 +832,10 @@ $carousel-control-font-size:                  64px !default;
 $carousel-indicator-active-bg:                $carousel-text-color !default;
 $carousel-indicator-border-color:             $carousel-text-color !default;
 $carousel-caption-color:                      $carousel-text-color !default;
+$carousel-border-color:                       #ededed;
 
 // Meets 3:1 for large text (if using small text this should meet contrast of 4.5:1 to $carousel-text-color)
-$carousel-mask-bg-color:                      rgba($theme-bg-lighter, 0.55) !default;
+$carousel-mask-bg-color:                      rgba(0, 0, 0, 0.4) !default;
 $carousel-link-underline-color:               lighten($brand-primary, 20%);
 
 
