SWI-4: Refactor mixins to loop through a Sass map

--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -167,6 +167,7 @@
 .carousel-mask {
   position: absolute;
   background: $jumbotron-bg;
+  @include theme-carousel-color;
   top: 0;
   left: 0;
   width: 100%;
