--- a/src/scss/utils/mixins.scss
+++ b/src/scss/utils/mixins.scss
@@ -32,6 +32,16 @@
   }
 }
 
+/**
+ * This is where all your colours are declared.
+ *
+ * The key should be equivalent to the name of the
+ * class to apply the theme colour, which is in the
+ * format of 'theme-{$element}-{$color}'.
+ *
+ * Classes should be declared on the body so that they
+ * can be accessed and applied to any element.
+ */
 $theme-colors: (
   red: #E51016,
   dark-red: #AD161E,
@@ -39,14 +49,14 @@ $theme-colors: (
   purple: #6239C8,
   blue: #1F6BFE,
   dark-blue: #123581,
-  default-accent: #0F7EB2,
-  default-background: #001F2C,
+  default-accent: $brand-primary,
+  default-background: $theme-bg,
   teal: #00837A,
   green: #298436,
   dark-orange: #D34300,
   dark-ochre: #947200,
   black: #111,
-  dark-grey: #555,
+  dark-grey: $gray,
   light-grey: #EAEAEA,
   white: #FFF,
 );
@@ -56,8 +66,7 @@ $theme-colors: (
  */
 @mixin theme-header-color {
   @each $name, $color in $theme-colors {
-
-    &.theme-header-#{$name} {
+    .theme-header-#{$name} & {
       background-color: $color;
     }
   }
@@ -68,7 +77,7 @@ $theme-colors: (
  */
 @mixin theme-nav-color {
   @each $name, $color in $theme-colors {
-    &.theme-nav-#{$name} {
+    .theme-nav-#{$name} & {
       background-color: $color;
     }
   }
@@ -79,7 +88,7 @@ $theme-colors: (
  */
 @mixin theme-footer-color {
   @each $name, $color in $theme-colors {
-    &.theme-footer-#{$name} {
+    .theme-footer-#{$name} & {
       background-color: $color;
     }
   }
@@ -91,21 +100,41 @@ $theme-colors: (
  */
 @mixin theme-carousel-color {
   @each $name, $color in $theme-colors {
-    &.theme-carousel-#{$name} {
+    .theme-carousel-#{$name} & {
       background-color: $color;
     }
   }
 }
 
 /**
- * Theme accent color. You can specify a different CSS property
- * to use this color when calling the mixin.
- * e.g. @include theme-accent-color('color')
+ * Theme accent color which defaults to background color.
+ * Affects colour of buttons, current navigation items etc.
+ *
+ * You can specify a different CSS property to use when
+ * calling the mixin e.g. @include theme-accent-color('color').
+ *
+ * You can also specify the hover/focus color of an element.
+ * You can choose between lighten and darken, but this could
+ * be extended to add other color manipulation techniques.
+ *
+ * This defaults to none so as not to bloat the CSS when there
+ * is no hover state for an element.
  */
-@mixin theme-accent-color($rule: 'background-color') {
+@mixin theme-accent-color($property: 'background-color', $type: 'none', $amount: 0%) {
   @each $name, $color in $theme-colors {
     body.theme-accent-#{$name} & {
-      #{$rule}: $color;
+      #{$property}: $color;
+
+      @if ($type != 'none') {
+        &:hover,
+        &:focus {
+          @if ($type == 'lighten') {
+            #{$property}: lighten($color, $amount);
+          } @else if ($type == 'darken') {
+            #{$property}: darken($color, $amount);
+          }
+        }
+      }
     }
   }
 }
@@ -115,8 +144,8 @@ $theme-colors: (
  */
 @mixin theme-link-color {
   @each $name, $color in $theme-colors {
-    body.theme-link-#{$name} & {
-      background-color: $color;
+    .theme-link-#{$name} & {
+      color: $color;
     }
   }
 }
