--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -3,6 +3,10 @@
   .navbar-toggle {
     padding: $padding-large-vertical $padding-base-horizontal;
     margin-right: 0;
+
+    .icon-bar {
+      @include theme-accent-color('background-color');
+    }
   }
 }
 
@@ -23,12 +27,12 @@
 
   .nav-item.current > a {
     background-color: $brand-primary;
-    @include theme-accent-color;
+    @include theme-accent-color('background-color');
 
     &:focus,
     &:hover {
       background-color: $brand-primary;
-      @include theme-accent-color;
+      @include theme-accent-color('background-color');
     }
   }
 
@@ -54,12 +58,12 @@
       &:hover .navbar-touch-caret,
       &:focus .navbar-touch-caret {
         background: $brand-primary;
-        @include theme-accent-color;
+        @include theme-accent-color('background-color');
 
         &:hover,
         &:focus {
           background-color: $brand-primary;
-          @include theme-accent-color;
+          @include theme-accent-color('background-color');
         }
       }
     }
@@ -67,7 +71,6 @@
 
   // Mobile only
   @media (max-width: $grid-float-breakpoint-max) {
-
     .navbar-nav {
       margin-top: 0;
       margin-bottom: 0;
@@ -75,6 +78,10 @@
 
     .navbar-collapse {
       box-shadow: none;
+    }
+
+    .navbar-form {
+      @include theme-header-color;
     }
 
     // Add hover border to left side
@@ -95,7 +102,7 @@
       &:hover:before,
       &:focus:before {
         background: $brand-primary;
-        @include theme-accent-color;
+        @include theme-accent-color('background-color');
       }
     }
 
@@ -114,6 +121,7 @@
         padding: 0;
         // Requires nesting
         background-color: $theme-bg-lighter;
+        @include theme-nav-color;
       }
     }
 
@@ -162,6 +170,10 @@
       > .dropdown-menu {
         margin-top: (-$nav-hover-border-width - 1px);
         margin-left: -1px;
+      }
+
+      .dropdown-menu > .active > a {
+        @include theme-accent-color;
       }
     }
 
