--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -56,12 +56,13 @@
     .btn-link {
       position: relative;
       border: 1px solid lighten($brand-primary, 20%);
-      @include theme-accent-color('border-color', 'lighten', 20%);
+      @include theme-accent-color('border-color');
       padding: 12px 16px;
       transition: all 0.3s ease;
 
       &:hover {
         border-color: lighten($brand-primary, 40%);
+        @include theme-accent-color('border-color', 'lighten', 20%);
       }
     }
   }
@@ -83,11 +84,12 @@
   // Custom carousel link style for theme
   a {
     border-bottom: 1px solid lighten($brand-primary, 20%);
-    @include theme-accent-color('border-bottom-color', 'darken', 10%);
+    @include theme-accent-color('border-bottom-color');
     text-decoration: none;
 
     &:hover {
       border-bottom-color: lighten($brand-primary, 10%);
+      @include theme-accent-color('border-bottom-color', 'darken', 10%);
       background-color: rgba($theme-bg, .2);
     }
   }
@@ -170,13 +172,13 @@
 .carousel-mask {
   position: absolute;
   background: $jumbotron-bg;
-  @include theme-carousel-color;
+  @include theme-carousel-color('background-color');
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 
-  .carousel-has-image & {
+  div.carousel-has-image & {
     background: $carousel-mask-bg-color;
   }
 }
