--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -5,7 +5,7 @@ body > header {
 }
 
 .header {
-  @include theme-header-color;
+  @include theme-header-color('background-color');
 }
 
 // Language selector
