--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -172,7 +172,12 @@
         margin-left: -1px;
       }
 
+      .dropdown-menu > li > a {
+        color: $text-color;
+      }
+
       .dropdown-menu > .active > a {
+        color: $navbar-default-link-active-color;
         @include theme-accent-color;
       }
     }
