--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -5,13 +5,13 @@
     margin-right: 0;
 
     .icon-bar {
-      @include theme-accent-color('background-color');
+      @include theme-color('accent', 'background-color');
     }
   }
 }
 
 .navbar-default {
-  @include theme-nav-color;
+  @include theme-color('nav', 'background-color');
 }
 
 // Override BS default behavior
@@ -27,12 +27,12 @@
 
   .nav-item.current > a {
     background-color: $brand-primary;
-    @include theme-accent-color('background-color');
+    @include theme-color('accent', 'background-color');
 
     &:focus,
     &:hover {
       background-color: $brand-primary;
-      @include theme-accent-color('background-color');
+      @include theme-color('accent', 'background-color');
     }
   }
 
@@ -58,12 +58,12 @@
       &:hover .navbar-touch-caret,
       &:focus .navbar-touch-caret {
         background: $brand-primary;
-        @include theme-accent-color('background-color');
+        @include theme-color('accent', 'background-color');
 
         &:hover,
         &:focus {
           background-color: $brand-primary;
-          @include theme-accent-color('background-color');
+          @include theme-color('accent', 'background-color');
         }
       }
     }
@@ -81,7 +81,7 @@
     }
 
     .navbar-form {
-      @include theme-header-color;
+      @include theme-color('header', 'background-color');
     }
 
     // Add hover border to left side
@@ -102,7 +102,7 @@
       &:hover:before,
       &:focus:before {
         background: $brand-primary;
-        @include theme-accent-color('background-color');
+        @include theme-color('accent', 'background-color');
       }
     }
 
@@ -121,7 +121,7 @@
         padding: 0;
         // Requires nesting
         background-color: $theme-bg-lighter;
-        @include theme-nav-color;
+        @include theme-color('nav', 'background-color');
       }
     }
 
@@ -152,18 +152,18 @@
         &:focus,
         &:hover {
           border-bottom-color: $brand-primary;
-          @include theme-accent-color('border-bottom-color');
+          @include theme-color('accent', 'border-bottom-color');
         }
       }
 
       > .current {
         border-bottom: $nav-hover-border-width solid $brand-primary;
-        @include theme-accent-color('border-bottom-color');
+        @include theme-color('accent', 'border-bottom-color');
 
         &:focus,
         &:hover {
           border-bottom-color: $brand-primary;
-          @include theme-accent-color('border-bottom-color');
+          @include theme-color('accent', 'border-bottom-color');
         }
       }
 
@@ -178,7 +178,7 @@
 
       .dropdown-menu > .active > a {
         color: $navbar-default-link-active-color;
-        @include theme-accent-color;
+        @include theme-color('accent', 'background-color');
       }
     }
 
@@ -201,7 +201,7 @@
 
       &.current .navbar-touch-caret {
         border-bottom: $nav-hover-border-width solid $brand-primary;
-        @include theme-accent-color('border-bottom-color');
+        @include theme-color('accent', 'border-bottom-color');
       }
     }
   }
