SWI-12: Add font theme mixin

--- a/src/scss/utils/mixins.scss
+++ b/src/scss/utils/mixins.scss
@@ -1,4 +1,4 @@
-@import './theme-colors';
+@import './theme-styles';
 
 // Styles for header, search and language selector
 @mixin form-controls-style() {
